[project]
name = "open-lifeworlds-python-lib"
version = "0.1.0"
description = "Python library to build data products"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dacite>=1.9.2",
    "pyyaml>=6.0.2",
    "setuptools>=80.9.0",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
