[project]
name = "open-lifeworlds-python-lib"
version = "0.1.0"
description = "Python library to build data products"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dacite>=1.9.2",
    "ipython>=9.6.0",
    "nbconvert>=7.16.6",
    "nbformat>=5.10.4",
    "notebook>=7.4.7",
    "pandas>=2.3.0",
    "pyyaml>=6.0.2",
    "requests>=2.32.4",
    "setuptools>=80.9.0",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
